client/src/components/chat/chat.css
.chat{
    max-width: 60%;
    display: flex;
    position: relative;
   margin-bottom:10px;
}

.user .userChat .trashChat{
    position: absolute;
   left:-20px;
   top:10px;
}

.trashChat .trash_icon{
  font-size: 20px;
  opacity: 0.7;
}


.userChat:hover .trashChat{
   display: block;
   cursor: pointer;
   color:rgb(199, 199, 199);
}

.userChat .trashChat{
    background-color: transparent;
    outline:none;
    border:none;
    display: none;

}


.trashChat:active .userChat{

}
.chatContent{
    display: flex;
    background-color:var(--bg-pink-primary); 
    justify-content: flex-end;
    padding: 10px 20px;
    border-radius: 10px 0px 10px 10px;
    max-width: max-content;
    position: relative;
}

.receiver .userChat .chatContent{
    flex-direction: row-reverse; 
    justify-content: flex-end;
    border-radius: 0px 10px 10px 10px;

}


.receiver .chatContent p{
    /* background:white; */
    color: 'white'; 
}


.userChat img{
    width: 30px;
    height: 30px;
    position: absolute;
    top:-30px;
    left: -28px;
    border-radius: 50%;
    object-fit: cover;
}



.user{
   align-self:flex-end;
}

.userChat{
    display: flex;
    flex-direction: column;
   align-items: flex-end;
}

.user .userChat .chatContent{
    flex-direction: row-reverse;
    justify-content: flex-start;
}


.user .userChat .chatContent p{
    max-width: max-content;
    /* padding: 10px 20px;
    border-radius: 10px 0px 10px 10px; */
    
}

.user .userChat .chatTime{
    text-align: right;
}
.receiver .userChat .chatTime{
    text-align: left;
}


.chatTime{
    font-size: 10px;
    color: var(--text-grey-medium);
    margin-top: 5px;
}

.user .userChat img{
    width: 30px;
    height: 30px;
    position: absolute;
    left:100%;
    border-radius: 50%;
    object-fit: cover;

}

.deletedMessage{
   max-width: 180px;
   text-wrap: nowrap;
    text-align: center;
    padding: 15px;
    background-color: rgba(128, 128, 128, 0.21);
    border-radius: 10px;
    font-size: 16px;
}

